--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,4 +2,7 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="blue_80">#1B75C4</color>
+    <color name="green_80">#1CC861</color>
+    <color name="orange_80">#E19037</color>
 </resources>
