--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,64 +4,81 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/bg"
     tools:context=".MainActivity">
 
-    <androidx.fragment.app.FragmentContainerView
-        android:id="@+id/mpBarchart"
-        android:layout_width="match_parent"
-        android:layout_height="200dp"
-        android:name="com.dennnytech.paydash.barchart.BarChartFragment"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent"/>
-
-    <androidx.fragment.app.FragmentContainerView
-        android:id="@+id/mpLineChart"
-        android:layout_width="match_parent"
-        android:layout_height="@dimen/_200dp"
-        android:layout_marginTop="@dimen/_20dp"
-        android:name="com.dennnytech.paydash.linechart.LineChartFragment"
-        app:layout_constraintTop_toBottomOf="@id/mpBarchart"
-        app:layout_constraintStart_toStartOf="parent"/>
-
-    <androidx.fragment.app.FragmentContainerView
-        android:id="@+id/mpPieChart"
-        android:layout_width="match_parent"
-        android:layout_height="@dimen/_200dp"
-        android:layout_marginTop="@dimen/_20dp"
-        android:name="com.dennnytech.paydash.piechart.PieChartFragment"
-        app:layout_constraintTop_toBottomOf="@id/mpLineChart"
-        app:layout_constraintStart_toStartOf="parent"/>
-
-
-    <androidx.constraintlayout.widget.ConstraintLayout
-       android:id="@+id/clLoading"
+   <com.google.android.material.appbar.AppBarLayout
+       android:id="@+id/appBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
-       android:padding="@dimen/_20dp"
-       android:visibility="gone"
-       app:layout_constraintBottom_toBottomOf="parent"
-       app:layout_constraintEnd_toEndOf="parent"
-       app:layout_constraintStart_toStartOf="parent"
-       app:layout_constraintTop_toTopOf="parent">
+       app:layout_constraintTop_toTopOf="parent"
+       app:layout_constraintStart_toStartOf="parent">
 
-       <ProgressBar
-           android:id="@+id/pbLoading"
-           android:layout_width="wrap_content"
+       <androidx.appcompat.widget.Toolbar
+           android:id="@+id/toolbar"
+           android:layout_width="match_parent"
            android:layout_height="wrap_content"
-           app:layout_constraintTop_toTopOf="parent"
-           app:layout_constraintStart_toStartOf="parent"
-           app:layout_constraintEnd_toEndOf="parent"/>
+           android:textAlignment="center"
+           app:title="@string/payway_dashboard" />
+   </com.google.android.material.appbar.AppBarLayout>
 
-       <com.google.android.material.textview.MaterialTextView
-           android:id="@+id/mtvLoading"
-           android:layout_width="wrap_content"
-           android:layout_height="wrap_content"
-           android:gravity="center"
-           android:text="@string/first_time_use_text"
-           app:layout_constraintStart_toStartOf="parent"
-           app:layout_constraintEnd_toEndOf="parent"
-           app:layout_constraintTop_toBottomOf="@id/pbLoading"/>
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:padding="@dimen/_8dp"
+        app:layout_constraintTop_toBottomOf="@id/appBar"
+        app:layout_constraintStart_toStartOf="parent">
 
-   </androidx.constraintlayout.widget.ConstraintLayout>
+        <androidx.fragment.app.FragmentContainerView
+            android:id="@+id/mpLineChart"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/_20dp"
+            android:name="com.dennnytech.paydash.ui.linechart.LineChartFragment"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toStartOf="parent"/>
+
+        <androidx.fragment.app.FragmentContainerView
+            android:id="@+id/mpPieChart"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/_20dp"
+            android:name="com.dennnytech.paydash.ui.piechart.PieChartFragment"
+            app:layout_constraintTop_toBottomOf="@id/mpLineChart"
+            app:layout_constraintStart_toStartOf="parent"/>
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/clLoading"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:padding="@dimen/_20dp"
+            android:visibility="gone"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent">
+
+            <ProgressBar
+                android:id="@+id/pbLoading"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"/>
+
+            <com.google.android.material.textview.MaterialTextView
+                android:id="@+id/mtvLoading"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:text="@string/first_time_use_text"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/pbLoading"/>
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
