--- a/app/src/main/res/layout/fragment_pie_chart.xml
+++ b/app/src/main/res/layout/fragment_pie_chart.xml
@@ -4,6 +4,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    app:strokeWidth="@dimen/_0dp"
     xmlns:tools="http://schemas.android.com/tools"
     app:cardCornerRadius="@dimen/_16dp">
 
